--- a/css/style.css
+++ b/css/style.css
@@ -877,6 +877,7 @@ address {
         align-items: baseline;
         gap: unset;
         width: 1440px;
+        margin: 0;
     }
     .no-form {
         display: flex;
